tests/reference/asr-test_str_indexing-b200a4e.stderr
semantic error: string indices must be integers
 --> tests/errors/test_str_indexing.py:4:13
  |
4 |     print(s[1.2])
  |             ^^^ 
